--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body, html {
     margin: 0;
     padding: 0;
@@ -7,18 +5,17 @@ body, html {
     font-size: 1.1em;
     line-height: 1.4em;
     font-weight: bold;
-    background-color: #1A1A1A;
-    color: #AAA;
+    background-color: #ffffff;
 }
 
 a,
 :link {
-  color: #2196f3;
+  color: #000000;
   font-weight: bold;
 }
 
 a:hover {
-    color: #9a9a9a;
+    color: #fdbe00;;
 }
 
 nav {
@@ -26,7 +23,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     padding: 1em;
-    background-color: #424242;
+    background-color: #fdbe00;
 }
   
 nav a {
@@ -36,10 +33,12 @@ nav a {
 }
   
 nav a:hover {
-    color: #9a9a9a;
+    color: #ffffff;
 }
 
 h1{
+    margin-top: 100px;
+    color: #fdbe00;
     left: 20px;
 }
 
@@ -75,8 +74,9 @@ h3{
 }
 
 section{
-    border: 0.2em solid #dedede;
+    border: 0.2em solid #fdbe00;
     border-radius: 30px;
+    background-color: #fdbe0130;
 
     margin-left: 10%;
     margin-right: 10%;
@@ -103,4 +103,3 @@ section{
 p {
     margin-top: 50px;
 }
-
